--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -20,7 +20,7 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div id="wrapper">
+        <%--<div id="wrapper">
             <!-- Navigation-->
             <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; background-color: white">
                 <div class="navbar-header" >
@@ -162,9 +162,153 @@
                 </div>
                 <asp:ValidationSummary ID="ValidationSummary1" runat="server" ShowMessageBox="False" ShowSummary="True" CssClass="alert alert-danger" />
             </div>
+        </div>--%>
+        <div class="wrapper">
+        <!-- Sidebar Holder -->
+        <nav id="sidebar">
+                <ul class="list-unstyled components">   
+                    <!-- Logotipo UCB -->                             
+                    <li>
+                        <div class="hidden-xs">
+                            <div>
+                                <h3 style ="color:#0e0e38; text-align:center">Sistema de almacenes</h3>
+                                <img src="../Img/LogoPeqUCB2.png" class="img-responsive" width="140" alt="LogoUcbWeb" style="margin: 0 auto; padding-top: 15px; padding-bottom: 15px;" />
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="Index.aspx"><i class="fa fa-home fa-fw" ></i>Inicio</a>
+                    </li>
+                    <li>
+                        <a href="ALM_RegistrarIngreso.aspx"><i class="fa fa-truck" ></i> Registrar ingreso</a>
+                    </li>
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapsePedidos" aria-expanded="false" aria-controls="collapsePedidos">
+                            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i> Pedidos
+                        </a>
+                        <div class="collapse" id="collapsePedidos">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnRealizarPedido" runat="server" CausesValidation="false" OnClick="lnkbtnRealizarPedido_Click">Realizar pedido</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnAutorizarPedido" runat="server" CausesValidation="false" OnClick="lnkbtnAutorizarPedido_Click">Autorizar pedido</asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapseSalidas" aria-expanded="false" aria-controls="collapseSalidas">
+                            <i class="fa fa-sign-out" aria-hidden="true"></i> Salidas
+                        </a>
+                        <div class="collapse" id="collapseSalidas">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnRegistarSalida" runat="server" CausesValidation="false" OnClick="lnkbtnRegistarSalida_Click">Registrar salida</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnAutorizarSalida" runat="server" CausesValidation="false" OnClick="lnkbtnAutorizarSalida_Click">Autorizar salida</asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapseMarcas" aria-expanded="false" aria-controls="collapseProductos">
+                            <i class="fa fa-shirtsinbulk" aria-hidden="true"></i> Marcas
+                        </a>
+                        <div class="collapse" id="collapseMarcas">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnCrearMarca" runat="server" CausesValidation="false" OnClick="lnkbtnCrearMarca_Click">Añadir marca</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lbnkbtnEliminarMarca" runat="server" CausesValidation="false" OnClick="lnkbtnEliminarMarca_Click">Eliminar marca</asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapseProductos" aria-expanded="false" aria-controls="collapseProductos">
+                            <i class="fa fa-pencil" aria-hidden="true"></i> Productos
+                        </a>
+                        <div class="collapse" id="collapseProductos">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnCrearProductos" runat="server" CausesValidation="false" OnClick="lnkbtnCrearProductos_Click">Crear productos</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnModificarProducto" runat="server" CausesValidation="false" OnClick="lnkbtnModificarProducto_Click">Modificar productos</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnEliminarProducto" runat="server" CausesValidation="false" OnClick="lnkbtnEliminarProducto_Click">Eliminar productos </asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapseReportes" aria-expanded="false" aria-controls="collapseReportes">
+                            <i class="fa fa-tasks" aria-hidden="true"></i> Reportes
+                        </a>
+                        <div class="collapse" id="collapseReportes">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnReporte1" runat="server" CausesValidation="false" OnClick="lnkbtnReporte1_Click">Reporte 1</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnReporte2" runat="server" CausesValidation="false" OnClick="lnkbtnReporte2_Click">Reporte 2</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnReporte3" runat="server" CausesValidation="false" OnClick="lnkbtnReporte3_Click">Reporte 3</asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>                                                 
+                </ul>
+        </nav>
+        <!-- Page Content Holder -->
+        <div id="content">
+            <%--Cabecera del contenido--%>
+            <nav class="navbar navbar-inverse">
+                    <div class="container-fluid" >
+                        <div class="navbar-header">                    
+                            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+                                <i id ="sidebarCollapseIcon" class="fa fa-close"></i>
+                            </button>   
+                        </div>      
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a style="color:#0e0e38;" href="STRS_Salir.aspx">Cerrar Sesión</a></li>
+                        </ul>
+                    </div>
+            </nav>
+            <%--Contenido INDEX--%>
+            <asp:ScriptManager ID="ScriptManager1" runat="server" EnableScriptGlobalization="true"></asp:ScriptManager>
+            <div class="container-fluid">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>            
+            </div>
+            <asp:ValidationSummary ID="ValidationSummary1" runat="server" ShowMessageBox="False" ShowSummary="True" CssClass="alert alert-danger" />
         </div>
+    </div>
     </form>
     <script src="../Scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="../Scripts/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../Scripts/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script type="text/javascript">
+            $(document).ready(function () {
+                $("#sidebar").mCustomScrollbar({
+                    theme: "minimal"
+                });
+                $('#sidebarCollapse').on('click', function () {
+                    $('#sidebar').toggleClass('active');
+                    $('#content').toggleClass('active');
+                    $('.collapse.in').toggleClass('in');
+                    $('a[aria-expanded=true]').attr('aria-expanded', 'false');
+                    if(document.getElementById('content').className == "active"){
+                        document.getElementById('sidebarCollapseIcon').className = "fa fa-align-left";
+                    } else{
+                        document.getElementById('sidebarCollapseIcon').className = "fa fa-close";
+                    }
+                });
+            });
+    </script>  
 </body>
 </html>
