--- a/SistemaAlmacenesWeb/Styles/ucb_lpz.css
+++ b/SistemaAlmacenesWeb/Styles/ucb_lpz.css
@@ -665,7 +665,7 @@
 {
     width:100%;
     cursor: pointer;
-    font-weight;
+    /*font-weight; Se comento esta linea porque daba errores*/
 }
 
 /*Modal Popup*/
@@ -1220,4 +1220,172 @@ thead th {
     color: #f0f0f0;
     text-shadow: 0px 0px 3px rgba(0,0,0, .5);
     border: 1px solid #3AC0F2;
+}
+
+/* ---------------------------------------------------
+    ESTILO DEL SIDEBAR (AGREGADO EL 7-12-2018)
+----------------------------------------------------- */
+
+a, a:hover, a:focus {
+    /*color: #337ab7;*/
+    color: #0e0e38;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+#sidebar {
+    width: 300px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background:
+            linear-gradient(
+                    rgba(206, 227, 235, 0.65),
+                        rgba(206, 227, 235, 0.65)
+            ),
+            url(../Img/biblioteca_b.jpg);
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -300px;
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #cee3eb;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    color: #04205F;
+    background: rgba(255, 255, 255, 0.5);
+}
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #1E3F8A;
+    background: rgba(206, 227, 235, 0.6);
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[data-toggle="collapse"][aria-expanded="false"]::before, a[data-toggle="collapse"][aria-expanded="true"]::before {
+    content: '\f078';
+    display: block;
+    position: absolute;
+    right: 20px;
+    font-family: 'FontAwesome';
+    font-size: 0.6em;
+}
+a[data-toggle="collapse"][aria-expanded="true"]::before {
+    content: '\f077';
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: rgba(206, 227, 235, 0.5);
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #C7DFE8;
+}
+
+a.article, a.article:hover {
+    background: #C7DFE8 !important;
+    color: #fff !important;
+}
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#content {
+    width: calc(100% - 300px);
+    padding: 40px;
+    min-height: 100vh;
+    transition: all 0.3s;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#content.active {
+    width: 100%;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -300px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #content {
+        width: 100%;
+    }
+    #content.active {
+        width: calc(100% - 300px);
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
 }
