libBds provedoores, ingresos

--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -20,149 +20,6 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <%--<div id="wrapper">
-            <!-- Navigation-->
-            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; background-color: white">
-                <div class="navbar-header" >
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Menú</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <div class="hidden-xs">
-                        <asp:LinkButton ID="lnkbtnAlmacen" style="margin-left: 300px" CssClass="navbar-brand" runat="server" OnClick="lnkbtnAlmacen_Click" CausesValidation="false">Sistema de almacenes</asp:LinkButton>
-                    </div>
-                    <div class="visible-xs">
-                        <asp:LinkButton ID="lnkbtnAlmacen1" CssClass="navbar-brand" runat="server" OnClick="lnkbtnAlmacen_Click" CausesValidation="false">Sistema de almacenes</asp:LinkButton>
-                    </div>
-                </div>
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <!-- /.navbar-top-links -->
-                    <div class="navbar-default sidebar" role="navigation" style="height:900px">
-                        <div class="sidebar-nav navbar-collapse">
-                            <ul class="nav" id="side-menu">
-                                
-                                <li>
-                                    <div class="hidden-xs">
-                                        <div style="background-color: #cee3eb;">
-                                            <!-- Sidebar user panel -->
-                                            <img src="../Img/LogoPeqUCB2.png" class="img-responsive" width="140" alt="LogoUcbWeb" style="margin: 0 auto; padding-top: 15px; padding-bottom: 15px;" />
-                                        </div>
-                                    </div>
-                                </li>  
-                                <li>
-                                    <a href="Index.aspx"><i class="fa fa-home fa-fw" ></i> Inicio</a>
-                                </li>
-                                 <li>
-                                    <a href="ALM_RegistrarIngreso.aspx"><i class="fa fa-cart-arrow-down" ></i> Registrar ingreso</a>
-                                </li>
-                                <li>
-                                    <a class="" role="link" data-toggle="collapse" href="#collapsePedidos" aria-expanded="false" aria-controls="collapsePedidos">
-                                        <i class="fa fa-chevron-down" aria-hidden="true"></i> Pedidos
-                                    </a>
-                                    <div class="collapse" id="collapsePedidos">
-                                        <ul class="nav nav-second-level">
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnRealizarPedido" runat="server" CausesValidation="false" OnClick="lnkbtnRealizarPedido_Click">Realizar pedido</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnAutorizarPedido" runat="server" CausesValidation="false" OnClick="lnkbtnAutorizarPedido_Click">Autorizar pedido</asp:LinkButton>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a class="" role="link" data-toggle="collapse" href="#collapseSalidas" aria-expanded="false" aria-controls="collapseSalidas">
-                                        <i class="fa fa-chevron-down" aria-hidden="true"></i> Salidas
-                                    </a>
-                                    <div class="collapse" id="collapseSalidas">
-                                        <ul class="nav nav-second-level">
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnRegistarSalida" runat="server" CausesValidation="false" OnClick="lnkbtnRegistarSalida_Click">Registrar salida</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnAutorizarSalida" runat="server" CausesValidation="false" OnClick="lnkbtnAutorizarSalida_Click">Autorizar salida</asp:LinkButton>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a class="" role="link" data-toggle="collapse" href="#collapseMArcas" aria-expanded="false" aria-controls="collapseProductos">
-                                        <i class="fa fa-chevron-down" aria-hidden="true"></i> Marcas
-                                    </a>
-                                    <div class="collapse" id="collapseMarcas">
-                                        <ul class="nav nav-second-level">
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnCrearMarca" runat="server" CausesValidation="false" OnClick="lnkbtnCrearMarca_Click">Añadir marca</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lbnkbtnEliminarMarca" runat="server" CausesValidation="false" OnClick="lnkbtnEliminarMarca_Click">Eliminar marca</asp:LinkButton>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a class="" role="link" data-toggle="collapse" href="#collapseProductos" aria-expanded="false" aria-controls="collapseProductos">
-                                        <i class="fa fa-chevron-down" aria-hidden="true"></i> Productos
-                                    </a>
-                                    <div class="collapse" id="collapseProductos">
-                                        <ul class="nav nav-second-level">
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnCrearProductos" runat="server" CausesValidation="false" OnClick="lnkbtnCrearProductos_Click">Crear productos</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnModificarProducto" runat="server" CausesValidation="false" OnClick="lnkbtnModificarProducto_Click">Modificar productos</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnEliminarProducto" runat="server" CausesValidation="false" OnClick="lnkbtnEliminarProducto_Click">Eliminar productos </asp:LinkButton>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                 <li>
-                                    <a class="" role="link" data-toggle="collapse" href="#collapseReportes" aria-expanded="false" aria-controls="collapseReportes">
-                                        <i class="fa fa-chevron-down" aria-hidden="true"></i> Reportes
-                                    </a>
-                                    <div class="collapse" id="collapseReportes">
-                                        <ul class="nav nav-second-level">
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnReporte1" runat="server" CausesValidation="false" OnClick="lnkbtnReporte1_Click">Reporte 1</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnReporte2" runat="server" CausesValidation="false" OnClick="lnkbtnReporte2_Click">Reporte 2</asp:LinkButton>
-                                            </li>
-                                            <li>
-                                                <asp:LinkButton ID="lnkbtnReporte3" runat="server" CausesValidation="false" OnClick="lnkbtnReporte3_Click">Reporte 3</asp:LinkButton>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>                              
-                                <li>
-                                    <a class="" role="link" data-toggle="collapse" href="#collapseAyuda" aria-expanded="false" aria-controls="collapseAyuda">
-                                        <i class="fa fa-question-circle" aria-hidden="true"></i> Ayuda
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="ALM_Salir.aspx"><i class="fa fa-sign-out fa-fw"></i> Cerrar sesión</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.sidebar-collapse -->
-                    </div>
-                </div>
-                <!-- /.navbar-static-side -->
-            </nav>
-            <!-- Main Content-->
-            <div id="page-wrapper">
-                <asp:ScriptManager ID="ScriptManager1" runat="server" EnableScriptGlobalization="true"></asp:ScriptManager>
-                <div class="container-fluid">
-                    <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
-                    </asp:ContentPlaceHolder>
-                </div>
-                <asp:ValidationSummary ID="ValidationSummary1" runat="server" ShowMessageBox="False" ShowSummary="True" CssClass="alert alert-danger" />
-            </div>
-        </div>--%>
         <div class="wrapper">
         <!-- Sidebar Holder -->
         <nav id="sidebar">
@@ -276,7 +133,7 @@
                             </button>   
                         </div>      
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a style="color:#0e0e38;" href="STRS_Salir.aspx">Cerrar Sesión</a></li>
+                            <li><a style="color:#0e0e38;" href="ALM_Salir.aspx">Cerrar Sesión</a></li>
                         </ul>
                     </div>
             </nav>
