Cambios en LibBD BD_ALM_Movimientos y en Principal

--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -85,19 +85,19 @@
                         </div>
                     </li>
                     <li>
-                        <a class="" role="link" data-toggle="collapse" href="#collapseProductos" aria-expanded="false" aria-controls="collapseProductos">
-                            <i class="fa fa-pencil" aria-hidden="true"></i> Productos
+                        <a class="" role="link" data-toggle="collapse" href="#collapseItems" aria-expanded="false" aria-controls="collapseItems">
+                            <i class="fa fa-pencil" aria-hidden="true"></i> Items
                         </a>
-                        <div class="collapse" id="collapseProductos">
+                        <div class="collapse" id="collapseItems">
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <asp:LinkButton ID="lnkbtnCrearProductos" runat="server" CausesValidation="false" OnClick="lnkbtnCrearProductos_Click">Crear productos</asp:LinkButton>
+                                    <asp:LinkButton ID="lnkbtnCrearItem" runat="server" CausesValidation="false" OnClick="lnkbtnCrearItem_Click" >Crear Item</asp:LinkButton>
                                 </li>
                                 <li>
-                                    <asp:LinkButton ID="lnkbtnModificarProducto" runat="server" CausesValidation="false" OnClick="lnkbtnModificarProducto_Click">Modificar productos</asp:LinkButton>
+                                    <asp:LinkButton ID="lnkbtnModificarItem" runat="server" CausesValidation="false" OnClick="lnkbtnModificarItem_Click" >Modificar Item</asp:LinkButton>
                                 </li>
                                 <li>
-                                    <asp:LinkButton ID="lnkbtnEliminarProducto" runat="server" CausesValidation="false" OnClick="lnkbtnEliminarProducto_Click">Eliminar productos </asp:LinkButton>
+                                    <asp:LinkButton ID="lnkbtnEliminarItem" runat="server" CausesValidation="false" OnClick="lnkbtnEliminarItem_Click" >Eliminar Item </asp:LinkButton>
                                 </li>
                             </ul>
                         </div>
@@ -119,7 +119,22 @@
                                 </li>
                             </ul>
                         </div>
-                    </li>                                                 
+                    </li>  
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapseProveedores" aria-expanded="false" aria-controls="collapseProveedores">
+                            <i class="fa fa-tasks" aria-hidden="true"></i> Reportes
+                        </a>
+                        <div class="collapse" id="collapseProveedores">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnCrearProveedor" runat="server" CausesValidation="false" OnClick="lnkbtnCrearProveedor_Click">Reporte 1</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnModificarProveedor" runat="server" CausesValidation="false" OnClick="lnkbtnModificarProveedor_Click">Reporte 2</asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>                                                  
                 </ul>
         </nav>
         <!-- Page Content Holder -->
