Principal y Administrar Porveedores

--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Principal.master.cs" Inherits="SistemaAlmacenes.Forms.Principal" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Principal.master.cs" Inherits="SistemaAlmacenesWeb.Forms.Principal" %>
 
 <!DOCTYPE html>
 
@@ -36,6 +36,21 @@
                     <li>
                         <a href="Index.aspx"><i class="fa fa-home fa-fw" ></i>Inicio</a>
                     </li>
+                    <li>
+                        <a class="" role="link" data-toggle="collapse" href="#collapseProveedores" aria-expanded="false" aria-controls="collapseProveedores">
+                            <i class="fa fa-handshake-o" aria-hidden="true"></i> Proveedores
+                        </a>
+                        <div class="collapse" id="collapseProveedores">
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnCrearProveedor" runat="server" CausesValidation="false" OnClick="lnkbtnCrearProveedor_Click">Crear Proveedor</asp:LinkButton>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnModificarProveedor" runat="server" CausesValidation="false" OnClick="lnkbtnModificarProveedor_Click">Modificar Proveedor</asp:LinkButton>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>  
                     <li>
                         <a href="ALM_RegistrarIngreso.aspx"><i class="fa fa-truck" ></i> Registrar ingreso</a>
                     </li>
@@ -119,21 +134,6 @@
                                 </li>
                             </ul>
                         </div>
-                    </li>  
-                    <li>
-                        <a class="" role="link" data-toggle="collapse" href="#collapseProveedores" aria-expanded="false" aria-controls="collapseProveedores">
-                            <i class="fa fa-tasks" aria-hidden="true"></i> Reportes
-                        </a>
-                        <div class="collapse" id="collapseProveedores">
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <asp:LinkButton ID="lnkbtnCrearProveedor" runat="server" CausesValidation="false" OnClick="lnkbtnCrearProveedor_Click">Reporte 1</asp:LinkButton>
-                                </li>
-                                <li>
-                                    <asp:LinkButton ID="lnkbtnModificarProveedor" runat="server" CausesValidation="false" OnClick="lnkbtnModificarProveedor_Click">Reporte 2</asp:LinkButton>
-                                </li>
-                            </ul>
-                        </div>
                     </li>                                                  
                 </ul>
         </nav>
@@ -156,8 +156,8 @@
             <asp:ScriptManager ID="ScriptManager1" runat="server" EnableScriptGlobalization="true"></asp:ScriptManager>
             <div class="container-fluid">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>            
-            </div>
-            <asp:ValidationSummary ID="ValidationSummary1" runat="server" ShowMessageBox="False" ShowSummary="True" CssClass="alert alert-danger" />
+                <asp:ValidationSummary ID="ValidationSummary1" runat="server" ShowMessageBox="False" ShowSummary="True" CssClass="alert alert-danger" />
+            </div>            
         </div>
     </div>
     </form>
