--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -57,6 +57,9 @@
                                 <li>
                                     <asp:LinkButton ID="lnkbtnEntregarPedido" runat="server" CausesValidation="false" OnClick="lnkbtnEntregarPedido_Click">Entregar pedido</asp:LinkButton>
                                 </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnGenerarToken" runat="server" CausesValidation="false" OnClick="lnkbtnGenerarToken_Click">Generar token</asp:LinkButton>
+                                </li>
                             </ul>
                         </div>
                     </li>
